Commit 4 del projecte mitjana dins de la branca main: Modificant la línia 1 de README / Modificant les línies 5 i 8 de mitjana.c

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-1- Versió 0.1 del programa mitjana 2020-2021
+1- Versió 0.4 del programa mitjana - 2024/2025
 2- Autor: dacomo2021daw2
 3- Per compilar el programa, executa:
 	gcc mitjana.c -o mitjana
